--- a/index.html
+++ b/index.html
@@ -586,10 +586,19 @@
               </td>
             </tr>
           </tbody></table>
+
+          <table width="40%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
+            <tr>
+              <td>
+                <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=Ou0uura8PTL7tD34tlruBWA4c1HcZVQ2276OikoVzEM&cl=ffffff&w=a"></script>
+              </td>
+            </tr>
+          </tbody></table>
         </td>
       </tr>
     </table>
-    <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=Ou0uura8PTL7tD34tlruBWA4c1HcZVQ2276OikoVzEM&cl=ffffff&w=a"></script>
+
+
   </body>
 </html>
 
