--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <p class="name" style="text-align: center;">
                   Yufei Wang (王雨飞)
                 </p>
-                <p>I'm currently a Ph.D. candidate at <a href="https://www.ntu.edu.sg/">Nanyang Technological University</a> in Singapre from 2020 fall, supervised by Prof. Bihan Wen, and Prof. Alex Kot. Before that, I got my bachelor degree of computer science in 2020 from <a href="https://www.uestc.edu.cn/">University of Electronic Science and Technology of China</a> (UESTC).
+                <p>I'm currently a Ph.D. candidate at <a href="https://www.ntu.edu.sg/">Nanyang Technological University</a> in Singapre from 2020 fall, supervised by <a href="https://personal.ntu.edu.sg/bihan.wen/">Prof. Bihan Wen</a>, and <a href="https://personal.ntu.edu.sg/eackot/">Prof. Alex Kot</a>. Before that, I got my bachelor degree of computer science in 2020 from <a href="https://www.uestc.edu.cn/">University of Electronic Science and Technology of China</a> (UESTC).
                 </p>
                 <p>
                 The central goal of my current research is to more effectively restore the visual world using either deep image priors (e.g., diffusion models, normalizing flows, GANs) or the degradation priors (e.g., noise formulations in the raw space) 
@@ -46,6 +46,18 @@
           </tbody></table>
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+            <td style="padding:20px;width:100%;vertical-align:middle">
+              <h2>News</h2>
+              <p>
+                <ul>
+                  <li><font color="red">I'm on the job market. I'm looking for a job in U.S.. Feel free to contact me if you have any opening!</font></li>
+                  <li> [Feb 27, 2024] Two papers are accepted by CVRP2024！</li>
+                  <li> [Feb 21, 2024] Ph.D. Thesis submitted! 🎉 </li>
+                </ul>
+              </p>
+            </td>
+          </tr>
           <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
               <h2>Honors and Awards</h2>
@@ -587,7 +599,7 @@
             </tr>
           </tbody></table>
 
-          <table width="40%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
+          <table width="50%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
             <tr>
               <td>
                 <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=Ou0uura8PTL7tD34tlruBWA4c1HcZVQ2276OikoVzEM&cl=ffffff&w=a"></script>
