--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <h2>News</h2>
               <p>
                 <ul>
-                  <li><font color="red">I'm on the job market. I'm looking for a job in U.S.. Feel free to contact me if you have any opening!</font></li>
+                  <!-- <li><font color="red">I'm on the job market. I'm looking for a job in U.S.. Feel free to contact me if you have any opening!</font></li> -->
                   <li> [Feb 27, 2024] Two papers are accepted by CVRP2024！</li>
                   <li> [Feb 21, 2024] Ph.D. Thesis submitted! 🎉 </li>
                 </ul>
