--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
         <br>
         Chong Wang, Lanqing Guo, <strong>Yufei Wang</strong>, Hao Cheng, Yi Yu, Bihan Wen
         <br>
-        <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR)</em>, 2024
+        <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR)</em>, 2024 <font color="red"><strong>(Oral Presentation 5.5%)</strong></font>
         <br>
-        <a href="https://arxiv.org/pdf/2311.14760.pdf">Paper coming soon</a>
+        <a href="https://arxiv.org/pdf/2403.10064v1.pdf">Paper</a>
         <p></p>
         <!-- <p>
         The first to utilize normalizing flow to low-light image enhancement, achieving superior performance.
@@ -554,7 +554,7 @@
       <br>
       <em> IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)</em>, 2020
       <br>
-      <a href="https://arxiv.org/pdf/2109.12548.pdf">Paper</a> /
+      <a href="https://arxiv.org/pdf/2009.05448.pdf">Paper</a> /
       <a href="https://github.com/wyf0912/MIXALL">Code</a>
       <p></p>
     </td>
