--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <br>
         Chong Wang, Lanqing Guo, <strong>Yufei Wang</strong>, Hao Cheng, Yi Yu, Bihan Wen
         <br>
-        <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR)</em>, 2024 <font color="red"><strong>(Oral Presentation 5.5%)</strong></font>
+        <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR)</em>, 2024 <font color="red"><strong>(Oral Presentation)</strong></font>
         <br>
         <a href="https://arxiv.org/pdf/2403.10064v1.pdf">Paper</a>
         <p></p>
