--- a/index.html
+++ b/index.html
@@ -14,33 +14,56 @@
 
   <body>
     <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+      <!-- Intro Begin -->
+      <tr style="padding:0px">
+        <td style="padding:0px">
+      <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+        <colgroup>
+          <col span="1" style="width: 40%;">
+          <col span="1" style="width: 60%;">
+        </colgroup>
+        <tr>
+          <td valign="middle", style="margin-top: 120px">
+            <img src="images/yufei.jpeg" height="170px">
+          </td>
+          <td valign="middle">
+            <p class="name" style="text-align: left;">
+              <name>Yufei Wang (王雨飞)</name>
+            </p>
+            <p>
+              Ph.D. student, <br>
+              <a href="https://www.ntu.edu.sg/" target="_blank">Nanyang Technological University, Singapore</a>
+            </p>
+            <p align=left>
+              E-mail: <span>yufei001 [AT] e.ntu.edu.sg</span>
+            </p>
+            <p align=left>
+              <!-- <a href="resume/resume_EN.pdf" target="_blank">Curriculum Vitae</a> -->
+              <!-- &nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp; -->
+              <a href="https://scholar.google.com/citations?user=jLd1l_sAAAAJ" target="_blank">Google
+                Scholar</a> &nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;
+              <!-- <a href="https://dblp.org/pid/229/8223.html" target="_blank">DBLP</a> -->
+              <!-- &nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp; -->
+              <a href="https://github.com/wyf0912" target="_blank"> GitHub </a>
+            </p>
+          </td>
+        </tr>
+      </table>
+      </td>
+      </tr>
+      <!-- Intro End -->
       <tr style="padding:0px">
         <td style="padding:0px">
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr style="padding:0px">
               <td style="padding:2.5%;width:63%;vertical-align:middle">
-                <p class="name" style="text-align: center;">
-                  Yufei Wang (王雨飞)
-                </p>
+                <h2>About me</h2>
                 <p>I'm currently a Ph.D. candidate at <a href="https://www.ntu.edu.sg/">Nanyang Technological University</a> in Singapre from 2020 fall, supervised by <a href="https://personal.ntu.edu.sg/bihan.wen/">Prof. Bihan Wen</a>, and <a href="https://personal.ntu.edu.sg/eackot/">Prof. Alex Kot</a>. Before that, I got my bachelor degree of computer science in 2020 from <a href="https://www.uestc.edu.cn/">University of Electronic Science and Technology of China</a> (UESTC).
                 </p>
                 <p>
                 The central goal of my current research is to more effectively restore the visual world using either deep image priors (e.g., diffusion models, normalizing flows, GANs) or the degradation priors (e.g., noise formulations in the raw space) 
                 </p>
-                <p style="text-align:center">
-                  <a href="mailto:yufei001@ntu.edu.sg">Email</a> &nbsp;/&nbsp;
-                  <!-- <a href="data/JonBarron-CV.pdf">CV</a> &nbsp;/&nbsp; -->
-                  <!-- <a href="data/JonBarron-bio.txt">Bio</a> &nbsp;/&nbsp; -->
-                  <a href="https://scholar.google.com/citations?user=jLd1l_sAAAAJ">Google Scholar</a> &nbsp;/&nbsp;
-				  <!-- <a href="https://www.threads.net/@jonbarron">Threads</a> &nbsp;/&nbsp;
-				  <a href="https://bsky.app/profile/jonbarron.bsky.social">Bluesky</a> &nbsp;/&nbsp;
-                  <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp;/&nbsp; -->
-                  <a href="https://github.com/wyf0912/">Github</a>
-                </p>
-              </td>
-              <td style="padding:2.5%;width:40%;max-width:40%">
-                <a href="images/yufei.jpeg"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 02%;" alt="profile photo" src="images/yufei.jpeg" class="hoverZoomLink"></a>
-                <p align="center">愿走出半生, 归来仍少年</p>
+
               </td>
             </tr>
           </tbody></table>
