--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <br>
         Chong Wang, Lanqing Guo, <strong>Yufei Wang</strong>, Hao Cheng, Yi Yu, Bihan Wen
         <br>
-        <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR)</em>, 2024 <font color="red"><strong>(Spotlight)</strong></font>
+        <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR)</em>, 2024 <font color="red"><strong>(Highlight)</strong></font>
         <br>
         <a href="https://arxiv.org/pdf/2403.10064v1.pdf">Paper</a>
         <p></p>
@@ -625,7 +625,7 @@
           <table width="50%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
             <tr>
               <td>
-                <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=Ou0uura8PTL7tD34tlruBWA4c1HcZVQ2276OikoVzEM&cl=ffffff&w=a"></script>
+                <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=67addd&w=a&t=tt&d=Ou0uura8PTL7tD34tlruBWA4c1HcZVQ2276OikoVzEM&co=ffffff&cmo=3acc3a&cmn=ff5353&ct=000000'></script>
               </td>
             </tr>
           </tbody></table>
