add ICML papers

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
               <p>
                 <ul>
                   <!-- <li><font color="red">I'm on the job market. I'm looking for a job in U.S.. Feel free to contact me if you have any opening!</font></li> -->
-                  <li> [Feb 27, 2024] Two papers are accepted by CVRP2024！</li>
+                  <li> [May 2, 2024] Two papers are accepted by ICML 2024！</li>
+                  <li> [Feb 27, 2024] Two papers are accepted by CVPR 2024！</li>
                   <li> [Feb 21, 2024] Ph.D. Thesis submitted! 🎉 </li>
                 </ul>
               </p>
@@ -117,7 +118,6 @@
     
     <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
-    <!-- cvpr24 -->
     <tr>
       <tr>
         <td>
@@ -125,6 +125,34 @@
         </td>
       </tr>
 
+      <!-- icml 24 -->
+      <tr>
+      <td style="padding:20px;width:30%;vertical-align:middle">
+        <div>
+          <img src='images/icml.png' width=100%>
+        </div>
+      </td>
+      <td style="padding:20px;width:70%;vertical-align:middle">
+        <a href="">
+          <span class="papertitle"> Compress Clean Signal from Noisy Raw Image: A Self-Supervised Approach</span>
+        </a>
+        <br>
+        Zhihao Li*, <strong>Yufei Wang*</strong>, Alex C. Kot, Bihan Wen
+        <br>
+        <em>International Conference on Machine Learning (ICML)</em>, 2024
+        <br>
+        <a href="https://arxiv.org/pdf/2311.14760.pdf">Paper coming soon</a>
+        /
+        <a href="">Code</a>
+        <p></p>
+        <!-- <p>
+        The first to utilize normalizing flow to low-light image enhancement, achieving superior performance.
+        </p> -->
+      </td>
+      </tr>
+
+      <!-- cvpr 24 -->
+      <tr>
       <td style="padding:20px;width:30%;vertical-align:middle">
         <div>
           <img src='images/cvpr24.png' width=100%>
@@ -431,6 +459,32 @@
       <h3 style="padding-left:20px;" id="robustness">Robustness & Security</h3>
       </td>
       </tr>
+  <!-- icml 24 -->
+  <tr>
+    <td style="padding:20px;width:30%;vertical-align:middle">
+      <div>
+        <img src='images/icml_2.jpg' width=100%>
+      </div>
+    </td>
+    <td style="padding:20px;width:70%;vertical-align:middle">
+      <a href="">
+        <span class="papertitle"> 
+          Purify Unlearnable Examples via Rate-Constrained Variational Autoencoders</span>
+      </a>
+      <br>
+      Yi Yu, <strong>Yufei Wang</strong>, Song Xia, Wenhan Yang, Shijian Lu, Yap-peng Tan, Alex C. Kot
+      <br>
+      <em>International Conference on Machine Learning (ICML)</em>, 2024
+      <br>
+      <a href="https://arxiv.org/pdf/2311.14760.pdf">Paper coming soon</a>
+      /
+      <a href="">Code</a>
+      <p></p>
+      <!-- <p>
+      The first to utilize normalizing flow to low-light image enhancement, achieving superior performance.
+      </p> -->
+    </td>
+    </tr>
 
     <!-- tnnls -->
     <tr>
