--- a/index.html
+++ b/index.html
@@ -4,30 +4,32 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
     <title>Yufei Wang</title>
-
+    <meta name="viewport" content="width=device-width">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
     <meta name="author" content="Yufei Wang">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="images/favicon/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     
   </head>
 
   <body>
-    <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+    <table width="800px" border="0" align="center" cellspacing="0" cellpadding="0">
+      <tbody>
       <!-- Intro Begin -->
       <tr style="padding:0px">
         <td style="padding:0px">
-      <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+      <table width="100%" align="left" border="0" cellspacing="0" cellpadding="12" style="table-layout:fixed;">
+        <tbody>
         <colgroup>
-          <col span="1" style="width: 40%;">
-          <col span="1" style="width: 60%;">
+          <col span="1" style="width: 35%;">
+          <col span="1" style="width: 65%;">
         </colgroup>
         <tr>
-          <td valign="middle", style="margin-top: 120px">
+          <td valign="middle">
             <img src="images/yufei.jpeg" height="170px">
           </td>
-          <td valign="middle">
-            <p class="name" style="text-align: left;">
+          <td valign="top">
+            <p align="left">
               <name>Yufei Wang (王雨飞)</name>
             </p>
             <p>
