--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <table width="800px" border="0" align="center" cellspacing="0" cellpadding="0">
+    <table width="760px" border="0" align="center" cellspacing="0" cellpadding="0">
       <tbody>
       <!-- Intro Begin -->
       <tr style="padding:0px">
@@ -56,7 +56,7 @@
       <!-- Intro End -->
       <tr style="padding:0px">
         <td style="padding:0px">
-          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;table-layout:fixed;"><tbody>
             <tr style="padding:0px">
               <td style="padding:2.5%;width:63%;vertical-align:middle">
                 <h2>About me</h2>
@@ -70,7 +70,7 @@
             </tr>
           </tbody></table>
 
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;table-layout:fixed;"><tbody>
           <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
               <h2>News</h2>
@@ -104,11 +104,11 @@
             </tr> -->
         </tbody></table>
 
-          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;table-layout:fixed;"><tbody>
               <tr>
               <td style="padding:20px;width:100%;vertical-align:middle">
                 <h2>Publications</h2>
-                <p>Topics: <button onclick="show_all(); change_color(this)">All Topics</button> / <button onclick="select_category('cp'); change_color(this)">Computational Photography & Generative models</button> / <button onclick="select_category('codec'); change_color(this)">Compression</button> / <button onclick="select_category('robust'); change_color(this)">Robustness & Security</button>
+                <p style="line-height: 1.5;">Topics: <button onclick="show_all(); change_color(this)">All Topics</button> / <button onclick="select_category('cp'); change_color(this)">Computational Photography & Generative models</button> / <button onclick="select_category('codec'); change_color(this)">Compression</button> / <button onclick="select_category('robust'); change_color(this)">Robustness & Security</button>
                 </p>
                 <p>(* represents the equal contribution.)</p>
                 <!-- <p>
@@ -118,8 +118,7 @@
             </tr>
           </tbody></table>
     
-    <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-
+    <table style="width:750;table-layout:fixed;"><tbody>
     <!-- <tr>
       <tr class="topic_head" id="all">
         <td>
