--- a/index.html
+++ b/index.html
@@ -143,6 +143,64 @@
       </td>
       </tr> -->
 
+    <!-- context3d'24 -->
+    <tr class="paper codec">
+      <td style="padding:20px;width:30%;vertical-align:middle">
+        <div>
+          <img src='images/ContextGS.jpg' width=100%>
+        </div>
+
+      </td>
+      <td style="padding:20px;width:70%;vertical-align:middle">
+        <span class="tag">Arxiv'24</span> &nbsp;
+        <a href="">
+          <span class="papertitle"> 
+            ContextGS: Compact 3D Gaussian Splatting with Anchor Level Context Mode</span>
+        </a>
+        <br>
+        <strong>Yufei Wang</strong>, Zhihao Li, Lanqing Guo, Wenhan Yang, Alex C. Kot, Bihan Wen
+        <br>
+        <em>Arxiv</em>, 2024
+        <br>
+        <a href="">Paper coming soon</a>
+        /
+        <a href="https://github.com/wyf0912/ContextGS">Code</a>
+        <p></p>
+        <!-- <p>
+        The first to utilize normalizing flow to low-light image enhancement, achieving superior performance.
+        </p> -->
+      </td>
+    </tr>
+
+    <!-- iqa'24 -->
+    <tr class="paper cp">
+      <td style="padding:20px;width:30%;vertical-align:middle">
+        <div>
+          <img src='images/iqa.jpg' width=100%>
+        </div>
+
+      </td>
+      <td style="padding:20px;width:70%;vertical-align:middle">
+        <span class="tag">Arxiv'24</span> &nbsp;
+        <a href="https://arxiv.org/pdf/2405.19996">
+          <span class="papertitle"> 
+            DP-IQA: Utilizing Diffusion Prior for Blind Image Quality Assessment in the Wild</span>
+        </a>
+        <br>
+        Honghao Fu*, <strong>Yufei Wang*</strong>, Wenhan Yang, Bihan Wen
+        <br>
+        <em>Arxiv</em>, 2024
+        <br>
+        <a href="https://arxiv.org/abs/2405.01460">Paper</a>
+        /
+        <a href="https://github.com/RomGai/DP-IQA">Code</a>
+        <p></p>
+        <!-- <p>
+        The first to utilize normalizing flow to low-light image enhancement, achieving superior performance.
+        </p> -->
+      </td>
+    </tr>
+
     <!-- icml'24 -->
     <tr class="paper robust">
       <td style="padding:20px;width:30%;vertical-align:middle">
