--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
       </td>
       <td style="padding:20px;width:70%;vertical-align:middle">
         <span class="tag">Arxiv'24</span> &nbsp;
-        <a href="">
+        <a href="https://github.com/wyf0912/ContextGS/blob/main/assets/ContextGS.pdf">
           <span class="papertitle"> 
             ContextGS: Compact 3D Gaussian Splatting with Anchor Level Context Mode</span>
         </a>
@@ -162,7 +162,7 @@
         <br>
         <em>Arxiv</em>, 2024
         <br>
-        <a href="">Paper coming soon</a>
+        <a href="https://github.com/wyf0912/ContextGS/blob/main/assets/ContextGS.pdf">Paper</a>
         /
         <a href="https://github.com/wyf0912/ContextGS">Code</a>
         <p></p>
