--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
               <p>
                 <ul>
                   <!-- <li><font color="red">I'm on the job market. I'm looking for a job in U.S.. Feel free to contact me if you have any opening!</font></li> -->
+                  <li> [May 31, 2024] A paper is accepted by IJCV 2024！</li>
                   <li> [May 2, 2024] Two papers are accepted by ICML 2024！</li>
                   <li> [Feb 27, 2024] Two papers are accepted by CVPR 2024！</li>
                   <li> [Feb'21, 2024] Ph.D. Thesis submitted! 🎉 </li>
@@ -142,6 +143,33 @@
       <h3 style="padding-left:20px;">Robustness & Security</h3>
       </td>
       </tr> -->
+
+    <!-- ijcv -->
+    <tr class="paper cp codec">
+      <td style="padding:20px;width:30%;vertical-align:middle">
+        <div>
+          <img src='images/ijcv2.png' width=100%>
+        </div>
+      </td>
+      <td style="padding:20px;width:70%;vertical-align:middle">
+        <span class="tag">IJCV'24</span> &nbsp;
+        <a href="https://arxiv.org/pdf/2306.12058.pdf">
+          <span class="papertitle">Beyond Learned Metadata-based Raw Image Reconstruction</span>
+        </a>
+        <br>
+        <strong>Yufei Wang</strong>, Yi Yu, Wenhan Yang, Lanqing Guo, Lap-Pui Chau, Alex Kot, Bihan Wen
+        <br>
+        <em>International Journal of Computer Vision (IJCV)</em>, 2024
+        <br>
+        <a href="https://arxiv.org/pdf/2306.12058.pdf">Paper</a>
+        /
+        <a href="https://github.com/wyf0912/R2LCM">Code</a>
+        <p></p>
+        <!-- <p>
+        The first to utilize normalizing flow to low-light image enhancement, achieving superior performance.
+        </p> -->
+      </td>
+    </tr>
 
     <!-- context3d'24 -->
     <tr class="paper codec">
@@ -379,33 +407,6 @@
         <em>International Conference on Computer Vision (ICCV)</em>, 2023
         <br>
         <a href="https://openaccess.thecvf.com/content/ICCV2023/papers/Guo_Boundary-Aware_Divide_and_Conquer_A_Diffusion-Based_Solution_for_Unsupervised_Shadow_ICCV_2023_paper.pdf">Paper</a>
-        <p></p>
-        <!-- <p>
-        The first to utilize normalizing flow to low-light image enhancement, achieving superior performance.
-        </p> -->
-      </td>
-    </tr>
-
-    <!-- ijcv -->
-    <tr class="paper cp codec">
-      <td style="padding:20px;width:30%;vertical-align:middle">
-        <div>
-          <img src='images/ijcv2.png' width=100%>
-        </div>
-      </td>
-      <td style="padding:20px;width:70%;vertical-align:middle">
-        <span class="tag">Arxiv'23</span> &nbsp;
-        <a href="https://arxiv.org/pdf/2306.12058.pdf">
-          <span class="papertitle">Beyond Learned Metadata-based Raw Image Reconstruction</span>
-        </a>
-        <br>
-        <strong>Yufei Wang</strong>, Yi Yu, Wenhan Yang, Lanqing Guo, Lap-Pui Chau, Alex Kot, Bihan Wen
-        <br>
-        <em>Arxiv</em>, 2023
-        <br>
-        <a href="https://arxiv.org/pdf/2306.12058.pdf">Paper</a>
-        /
-        <a href="https://github.com/wyf0912/R2LCM">Code</a>
         <p></p>
         <!-- <p>
         The first to utilize normalizing flow to low-light image enhancement, achieving superior performance.
