--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
       </td>
       <td style="padding:20px;width:70%;vertical-align:middle">
         <span class="tag">Arxiv'24</span> &nbsp;
-        <a href="https://github.com/wyf0912/ContextGS/blob/main/assets/ContextGS.pdf">
+        <a href="https://arxiv.org/pdf/2405.20721">
           <span class="papertitle"> 
             ContextGS: Compact 3D Gaussian Splatting with Anchor Level Context Mode</span>
         </a>
@@ -266,7 +266,7 @@
       </td>
       <td style="padding:20px;width:70%;vertical-align:middle">
         <span class="tag">ICML'24</span> &nbsp;
-        <a href="">
+        <a>
           <span class="papertitle"> Compress Clean Signal from Noisy Raw Image: A Self-Supervised Approach</span>
         </a>
         <br>
@@ -274,7 +274,7 @@
         <br>
         <em>International Conference on Machine Learning (ICML)</em>, 2024
         <br>
-        <a href="https://arxiv.org/pdf/2311.14760.pdf">Paper coming soon</a>
+        <a>Paper coming soon</a>
         /
         <a href="">Code</a>
         <p></p>
