--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                   <li> [May 31, 2024] A paper is accepted by IJCV 2024！</li>
                   <li> [May 2, 2024] Two papers are accepted by ICML 2024！</li>
                   <li> [Feb 27, 2024] Two papers are accepted by CVPR 2024！</li>
-                  <li> [Feb'21, 2024] Ph.D. Thesis submitted! 🎉 </li>
+                  <!-- <li> [Feb'21, 2024] Ph.D. Thesis submitted! 🎉 </li> -->
                 </ul>
               </p>
             </td>
@@ -222,6 +222,33 @@
         <a href="https://arxiv.org/abs/2405.01460">Paper</a>
         /
         <a href="https://github.com/RomGai/DP-IQA">Code</a>
+        <p></p>
+        <!-- <p>
+        The first to utilize normalizing flow to low-light image enhancement, achieving superior performance.
+        </p> -->
+      </td>
+    </tr>
+
+    <!-- acm mm -->
+    <tr class="paper cp">
+      <td style="padding:20px;width:30%;vertical-align:middle">
+        <div>
+          <img src='images/mm.jpg' width=100%>
+        </div>
+
+      </td>
+      <td style="padding:20px;width:70%;vertical-align:middle">
+        <span class="tag">Arxiv'24</span> &nbsp;
+        <a href="https://arxiv.org/pdf/2405.20721">
+          <span class="papertitle"> 
+            Evolving Storytelling: Benchmarks and Methods for New Character Customization with Diffusion Models</span>
+        </a>
+        <br>
+        Xiyu Wang, <strong>Yufei Wang</strong>, Satoshi Tsutsui, Weisi Lin, Bihan Wen, Alex C. Kot
+        <br>
+        <em>Arxiv</em>, 2024
+        <br>
+        <a href="https://arxiv.org/pdf/2405.11852">Paper</a>
         <p></p>
         <!-- <p>
         The first to utilize normalizing flow to low-light image enhancement, achieving superior performance.
