--- a/index.html
+++ b/index.html
@@ -200,6 +200,36 @@
       </td>
     </tr>
 
+
+    <!-- 3dgs dark'24 -->
+    <tr class="paper codec">
+      <td style="padding:20px;width:30%;vertical-align:middle">
+        <div>
+          <img src='images/3DGSDark.png' width=100%>
+        </div>
+
+      </td>
+      <td style="padding:20px;width:70%;vertical-align:middle">
+        <span class="tag">Arxiv'24</span> &nbsp;
+        <a href="https://arxiv.org/abs/2406.08300">
+          <span class="papertitle"> 
+            From Chaos to Clarity: 3DGS in the Dark</span>
+        </a>
+        <br>
+        Zhihao Li*, <strong>Yufei Wang*</strong>, Alex C. Kot, Bihan Wen
+        <br>
+        <em>Arxiv</em>, 2024
+        <br>
+        <a href="https://arxiv.org/abs/2406.08300">Paper</a>
+        <!-- /
+        <a href="https://github.com/wyf0912/ContextGS">Code</a> -->
+        <p></p>
+        <!-- <p>
+        The first to utilize normalizing flow to low-light image enhancement, achieving superior performance.
+        </p> -->
+      </td>
+    </tr>
+
     <!-- iqa'24 -->
     <tr class="paper cp">
       <td style="padding:20px;width:30%;vertical-align:middle">
