--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
               <h2>News</h2>
               <p>
                 <ul>
-                  <!-- <li><font color="red">I'm on the job market. I'm looking for a job in U.S.. Feel free to contact me if you have any opening!</font></li> -->
+                  <li><font color="red">I'm on the job market. I'm looking for a full-time job (both industry and post-doc) in U.S.. Feel free to contact me if you have any opening!</font>
                   <li> [May 31, 2024] A paper is accepted by IJCV 2024！</li>
                   <li> [May 2, 2024] Two papers are accepted by ICML 2024！</li>
                   <li> [Feb 27, 2024] Two papers are accepted by CVPR 2024！</li>
-                  <!-- <li> [Feb'21, 2024] Ph.D. Thesis submitted! 🎉 </li> -->
+                  <li> [Feb'21, 2024] Ph.D. Thesis submitted! Expect to get the graduation certificate in early of 2025 🎉 </li>
                 </ul>
               </p>
             </td>
@@ -145,7 +145,7 @@
       </tr> -->
 
     <!-- ijcv -->
-    <tr class="paper cp codec">
+    <tr class="paper cp codec select">
       <td style="padding:20px;width:30%;vertical-align:middle">
         <div>
           <img src='images/ijcv2.png' width=100%>
@@ -172,7 +172,7 @@
     </tr>
 
     <!-- context3d'24 -->
-    <tr class="paper codec">
+    <tr class="paper codec select">
       <td style="padding:20px;width:30%;vertical-align:middle">
         <div>
           <img src='images/ContextGS.jpg' width=100%>
@@ -190,7 +190,7 @@
         <br>
         <em>Arxiv</em>, 2024
         <br>
-        <a href="https://github.com/wyf0912/ContextGS/blob/main/assets/ContextGS.pdf">Paper</a>
+        <a href="https://arxiv.org/pdf/2405.20721">Paper</a>
         /
         <a href="https://github.com/wyf0912/ContextGS">Code</a>
         <p></p>
@@ -202,7 +202,7 @@
 
 
     <!-- 3dgs dark'24 -->
-    <tr class="paper codec">
+    <tr class="paper codec select">
       <td style="padding:20px;width:30%;vertical-align:middle">
         <div>
           <img src='images/3DGSDark.png' width=100%>
@@ -287,7 +287,7 @@
     </tr>
 
     <!-- icml'24 -->
-    <tr class="paper robust">
+    <tr class="paper robust select">
       <td style="padding:20px;width:30%;vertical-align:middle">
         <div>
           <img src='images/icml_2.jpg' width=100%>
@@ -315,7 +315,7 @@
       </tr>
 
      <!-- icml'24 -->
-     <tr class="paper codec cp">
+     <tr class="paper codec cp select">
       <td style="padding:20px;width:30%;vertical-align:middle">
         <div>
           <img src='images/icml.png' width=100%>
