--- a/index.html
+++ b/index.html
@@ -286,6 +286,57 @@
       </td>
     </tr>
 
+    <!-- eccv -->
+    <tr class="paper cp">
+      <td style="padding:20px;width:30%;vertical-align:middle">
+        <div>
+          <img src='images/eccv_video_denoise.jpg' width=100%>
+        </div>
+      </td>
+      <td style="padding:20px;width:70%;vertical-align:middle">
+        <span class="tag">ECCV'24</span> &nbsp;
+        <a href="">
+          <span class="papertitle">Temporal As a Plugin: Unsupervised Video Denoising with Pre-Trained Image Denoisers</span>
+        </a>
+        <br>
+        Zixuan Fu, Lanqing Guo (Nanyang Technological University), Chong Wang, <strong>Yufei Wang</strong>, Zhihao Li, Bihan Wen
+        <br>
+        <em>Arxiv</em>, 2024
+        <br>
+        <a href="">Paper coming soon</a>
+        <p></p>
+        <!-- <p>
+        The first to utilize normalizing flow to low-light image enhancement, achieving superior performance.
+        </p> -->
+      </td>
+    </tr>
+  
+    <!-- eccv cheap scale -->
+    <tr class="paper cp">
+      <td style="padding:20px;width:30%;vertical-align:middle">
+        <div>
+          <img src='images/cheap_scale.png' width=100%>
+        </div>
+      </td>
+      <td style="padding:20px;width:70%;vertical-align:middle">
+        <span class="tag">ECCV'24</span> &nbsp;
+        <a href="">
+          <span class="papertitle">Make a Cheap Scaling: A Self-Cascade Diffusion Model
+            for Higher-Resolution Adaptation</span>
+        </a>
+        <br>
+        Lanqing Guo, Yingqing He, Haoxin Chen, Menghan Xia, Xiaodong Cun, <strong>Yufei Wang</strong>, Siyu Huang, Yong Zhang, Xintao Wang, Qifeng Chen, Ying Shan, Bihan Wen
+        <br>
+        <em>Arxiv</em>, 2024
+        <br>
+        <a href="https://arxiv.org/pdf/2402.10491.pdf">Paper</a>
+        <p></p>
+        <!-- <p>
+        The first to utilize normalizing flow to low-light image enhancement, achieving superior performance.
+        </p> -->
+      </td>
+    </tr>
+
     <!-- icml'24 -->
     <tr class="paper robust select">
       <td style="padding:20px;width:30%;vertical-align:middle">
@@ -386,32 +437,6 @@
         <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR)</em>, 2024 <font color="red"><strong>(Highlight)</strong></font>
         <br>
         <a href="https://arxiv.org/pdf/2403.10064v1.pdf">Paper</a>
-        <p></p>
-        <!-- <p>
-        The first to utilize normalizing flow to low-light image enhancement, achieving superior performance.
-        </p> -->
-      </td>
-    </tr>
-
-    <!-- cheap scale -->
-    <tr class="paper cp">
-      <td style="padding:20px;width:30%;vertical-align:middle">
-        <div>
-          <img src='images/cheap_scale.png' width=100%>
-        </div>
-      </td>
-      <td style="padding:20px;width:70%;vertical-align:middle">
-        <span class="tag">Arxiv'24</span> &nbsp;
-        <a href="">
-          <span class="papertitle">Make a Cheap Scaling: A Self-Cascade Diffusion Model
-            for Higher-Resolution Adaptation</span>
-        </a>
-        <br>
-        Lanqing Guo, Yingqing He, Haoxin Chen, Menghan Xia, Xiaodong Cun, <strong>Yufei Wang</strong>, Siyu Huang, Yong Zhang, Xintao Wang, Qifeng Chen, Ying Shan, Bihan Wen
-        <br>
-        <em>Arxiv</em>, 2024
-        <br>
-        <a href="https://arxiv.org/pdf/2402.10491.pdf">Paper</a>
         <p></p>
         <!-- <p>
         The first to utilize normalizing flow to low-light image enhancement, achieving superior performance.
