--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
         <br>
         Zixuan Fu, Lanqing Guo, Chong Wang, <strong>Yufei Wang</strong>, Zhihao Li, Bihan Wen
         <br>
-        <em>Arxiv</em>, 2024
+        <em>The European Conference on Computer Vision (ECCV)</em>, 2024
         <br>
         <a href="">Paper coming soon</a>
         <p></p>
@@ -327,7 +327,7 @@
         <br>
         Lanqing Guo, Yingqing He, Haoxin Chen, Menghan Xia, Xiaodong Cun, <strong>Yufei Wang</strong>, Siyu Huang, Yong Zhang, Xintao Wang, Qifeng Chen, Ying Shan, Bihan Wen
         <br>
-        <em>Arxiv</em>, 2024
+        <em>The European Conference on Computer Vision (ECCV)</em>, 2024
         <br>
         <a href="https://arxiv.org/pdf/2402.10491.pdf">Paper</a>
         <p></p>
