--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
       <table width="100%" align="left" border="0" cellspacing="0" cellpadding="12" style="table-layout:fixed;">
         <tbody>
         <colgroup>
-          <col span="1" style="width: 35%;">
+          <col span="1" style="width: 33%;">
           <col span="1" style="width: 65%;">
         </colgroup>
         <tr>
           <td valign="middle">
-            <img src="images/yufei.jpeg" height="170px">
+            <img src="images/yufei.jpg" height="170px">
           </td>
           <td valign="top">
             <p align="left">
@@ -77,6 +77,7 @@
               <p>
                 <ul>
                   <li><font color="red">I'm on the job market. I'm looking for a full-time job (both industry and post-doc) in U.S.. Feel free to contact me if you have any opening!</font>
+                  <li> [July, 2024] One ACM MM and two ECCV are accepted！</li>
                   <li> [May 31, 2024] A paper is accepted by IJCV 2024！</li>
                   <li> [May 2, 2024] Two papers are accepted by ICML 2024！</li>
                   <li> [Feb 27, 2024] Two papers are accepted by CVPR 2024！</li>
@@ -241,7 +242,7 @@
 
       </td>
       <td style="padding:20px;width:70%;vertical-align:middle">
-        <span class="tag">Arxiv'24</span> &nbsp;
+        <span class="tag">ACM MM'24</span> &nbsp;
         <a href="https://arxiv.org/pdf/2405.20721">
           <span class="papertitle"> 
             Evolving Storytelling: Benchmarks and Methods for New Character Customization with Diffusion Models</span>
@@ -249,7 +250,7 @@
         <br>
         Xiyu Wang, <strong>Yufei Wang</strong>, Satoshi Tsutsui, Weisi Lin, Bihan Wen, Alex C. Kot
         <br>
-        <em>Arxiv</em>, 2024
+        <em>ACM Multimedia (ACM MM)</em>, 2024
         <br>
         <a href="https://arxiv.org/pdf/2405.11852">Paper</a>
         <p></p>
