icml paper link

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
         <br>
         <em>International Conference on Machine Learning (ICML)</em>, 2024
         <br>
-        <a>Paper coming soon</a>
+        <a href="https://openreview.net/pdf?id=5sgkNtexs2">Paper</a>
         /
         <a href="">Code</a>
         <p></p>
