--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
         <br>
         Xiyu Wang, <strong>Yufei Wang</strong>, Satoshi Tsutsui, Weisi Lin, Bihan Wen, Alex C. Kot
         <br>
-        <em>ACM Multimedia (ACM MM)</em>, 2024
+        <em>ACM Multimedia (ACM MM)</em>, 2024<font color="red"><strong> (Oral Presentation 3.97%)</strong></font>
         <br>
         <a href="https://arxiv.org/pdf/2405.11852">Paper</a>
         <p></p>
