--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
       </td>
       <td style="padding:20px;width:70%;vertical-align:middle">
-        <span class="tag">Arxiv'24</span> &nbsp;
+        <span class="tag">NeurIPS'24</span> &nbsp;
         <a href="https://arxiv.org/pdf/2405.20721">
           <span class="papertitle"> 
             ContextGS: Compact 3D Gaussian Splatting with Anchor Level Context Mode</span>
@@ -162,7 +162,7 @@
         <br>
         <strong>Yufei Wang</strong>, Zhihao Li, Lanqing Guo, Wenhan Yang, Alex C. Kot, Bihan Wen
         <br>
-        <em>Arxiv</em>, 2024
+        <em>Thirty-eighth Annual Conference on Neural Information Processing Systems</em>, 2024
         <br>
         <a href="https://arxiv.org/pdf/2405.20721">Paper</a>
         /
@@ -184,7 +184,7 @@
 
       </td>
       <td style="padding:20px;width:70%;vertical-align:middle">
-        <span class="tag">Arxiv'24</span> &nbsp;
+        <span class="tag">NeurIPS'24</span> &nbsp;
         <a href="https://arxiv.org/abs/2406.08300">
           <span class="papertitle"> 
             From Chaos to Clarity: 3DGS in the Dark</span>
@@ -192,7 +192,7 @@
         <br>
         Zhihao Li*, <strong>Yufei Wang*</strong>, Alex C. Kot, Bihan Wen
         <br>
-        <em>Arxiv</em>, 2024
+        <em>Thirty-eighth Annual Conference on Neural Information Processing Systems</em>, 2024
         <br>
         <a href="https://arxiv.org/abs/2406.08300">Paper</a>
         <!-- /
