--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
               <p>
                 <ul>
                   <li><font color="red">I'm on the job market. I'm looking for a full-time job (both industry and post-doc) in U.S.. Feel free to contact me if you have any opening!</font>
+                  <li> [Sep, 2024] Two papers are accepted by NeurIPS 2024！</li>
                   <li> [July, 2024] One ACM MM and two ECCV are accepted！</li>
                   <li> [May 31, 2024] A paper is accepted by IJCV 2024！</li>
                   <li> [May 2, 2024] Two papers are accepted by ICML 2024！</li>
@@ -162,7 +163,7 @@
         <br>
         <strong>Yufei Wang</strong>, Zhihao Li, Lanqing Guo, Wenhan Yang, Alex C. Kot, Bihan Wen
         <br>
-        <em>Thirty-eighth Annual Conference on Neural Information Processing Systems</em>, 2024
+        <em>Thirty-eighth Annual Conference on Neural Information Processing Systems (NeurIPS)</em>, 2024
         <br>
         <a href="https://arxiv.org/pdf/2405.20721">Paper</a>
         /
@@ -176,7 +177,7 @@
 
 
     <!-- 3dgs dark'24 -->
-    <tr class="paper codec select">
+    <tr class="paper select cp">
       <td style="padding:20px;width:30%;vertical-align:middle">
         <div>
           <img src='images/3DGSDark.png' width=100%>
@@ -192,7 +193,7 @@
         <br>
         Zhihao Li*, <strong>Yufei Wang*</strong>, Alex C. Kot, Bihan Wen
         <br>
-        <em>Thirty-eighth Annual Conference on Neural Information Processing Systems</em>, 2024
+        <em>Thirty-eighth Annual Conference on Neural Information Processing Systems (NeurIPS)</em>, 2024
         <br>
         <a href="https://arxiv.org/abs/2406.08300">Paper</a>
         <!-- /
