--- a/index.html
+++ b/index.html
@@ -794,7 +794,7 @@
         <img src='images/icassp.png' width=100%>
       </div>
     </td>
-    <td style="padding:20px;width:70%;vertical-align:middle">
+    <td style="padding:0px;width:70%;vertical-align:middle">
       <span class="tag">ICASSP'20</span> &nbsp;
       <a>
         <span class="papertitle">Heterogeneous Domain Generalization via Domain Mixup</span>
@@ -812,7 +812,7 @@
 
   <!-- face attack -->
   <tr class="paper robust">
-    <td style="padding:20px;width:30%;vertical-align:middle">
+    <td style="padding:0px;width:30%;vertical-align:middle">
       <div>
         <img src='images/face_attack.png' width=100%>
       </div>
@@ -834,6 +834,38 @@
   </tr>   
           </tbody></table>
 
+        <!-- Internship Begin -->
+        <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
+          <tr>
+            <td>
+              <h2>Experience</h2>
+            </td>
+          </tr>
+        </table>
+         <table>
+          <td style="padding:20px;width:20%;vertical-align:middle;padding-bottom:0px">
+            <div>
+              <img src='images/aws.png' width=100%>
+            </div>
+          </td>
+          <td>
+              <p class="font" style="font-size: 16px">2024.09&mdash;Now: <strong>AWS AI Lab</strong>, Research Intern</p>
+              <p>Bellevue, U.S.</p> 
+          </td>
+      </tr>
+        <tr>
+            <td style="padding:20px;width:20%;vertical-align:middle;padding-top:0px">
+              <div>
+                <img src='images/pjlab.jpeg' width=100%>
+              </div>
+            </td>
+            <td>
+              <p class="font" style="font-size: 16px">2023.10&mdash;2024.01: <strong>Shanghai AI Lab</strong>, </a> Research Intern</p>
+              <p>Shanghai, China</p> 
+            </td>
+        </tr>
+
+        </table>
           
           <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
             <tr>
