--- a/index.html
+++ b/index.html
@@ -234,6 +234,29 @@
       </td>
     </tr>
 
+ <!-- face attack -->
+ <tr class="paper robust">
+  <td style="padding:0px;width:30%;vertical-align:middle">
+    <div>
+      <img src='images/spl.png' width=100%>
+    </div>
+  </td>
+  <td style="padding:20px;width:70%;vertical-align:middle">
+    <span class="tag">SPL'24</span> &nbsp;
+    <a>
+      <span class="papertitle">Light Can Hack Your Face! Black-box Backdoor
+        Attack on Face Recognition Systems</span>
+    </a>
+    <br>
+    <strong>Yufei Wang*</strong>, Haoliang Li*, Liepiao Zhao, Yongjian Hu, Alex C. Kot
+    <br>
+    <em> Signal Processing Letter</em>, 2024
+    <br>
+    <a href="https://arxiv.org/pdf/2009.06996.pdf">Preprint</a>
+    <p></p>
+  </td>
+</tr> 
+
     <!-- acm mm -->
     <tr class="paper cp">
       <td style="padding:20px;width:30%;vertical-align:middle">
@@ -808,30 +831,7 @@
       <a href="https://github.com/wyf0912/MIXALL">Code</a>
       <p></p>
     </td>
-  </tr>   
-
-  <!-- face attack -->
-  <tr class="paper robust">
-    <td style="padding:0px;width:30%;vertical-align:middle">
-      <div>
-        <img src='images/face_attack.png' width=100%>
-      </div>
-    </td>
-    <td style="padding:20px;width:70%;vertical-align:middle">
-      <span class="tag">Arxiv'20</span> &nbsp;
-      <a>
-        <span class="papertitle">Light Can Hack Your Face! Black-box Backdoor
-          Attack on Face Recognition Systems</span>
-      </a>
-      <br>
-      Haoliang Li*, <strong>Yufei Wang*</strong>, Xiaofei Xie, Yang Liu, Shiqi Wang, Renjie Wan, Lap-Pui Chau, Alex C. Kot
-      <br>
-      <em> Arxiv</em>, 2020
-      <br>
-      <a href="https://arxiv.org/pdf/2009.06996.pdf">Paper</a>
-      <p></p>
-    </td>
-  </tr>   
+  </tr>     
           </tbody></table>
 
         <!-- Internship Begin -->
