--- a/index.html
+++ b/index.html
@@ -849,7 +849,7 @@
             </div>
           </td>
           <td>
-              <p class="font" style="font-size: 16px">2024.09&mdash;Now: <strong>AWS AI Lab</strong>, Research Intern</p>
+              <p class="font" style="font-size: 16px">2024.09&mdash;2024.12: <strong>AWS AI Lab</strong>, Research Intern</p>
               <p>Bellevue, U.S.</p> 
           </td>
       </tr>
